-In return for the difficulty, each enemy has much higher drop rates for the blood moon fishing items, allowing you to farm them more quickly and easily

Each enemy variant is as follows:
-Wandering Eye Fish -> Peeper fish (Prehardmode)
-Zombie Merman -> Flesh Merfolk (Prehardmode)
-Blood Squid -> Clot Squid (Prehardmode, and summoned by the claret cephalopod)
-Hemogoblin Shark -> Hemostasis Beast (Hardmode)
-Blood Eel -> Aortic Eel (Hardmode)
-Dreadnautilus -> Claret Cephalopod (Hardmode, post orro & boro)


Slingshot Sub-class:

-Slingshot weapons are now a ranger subclass in spooky mod (Sorta?)
-They use mossy pebbles as ammo, which are crafted from mossy stone in the spooky forest, or can be purchased from the merchant
-Like some vanilla ranged weapons, some slingshots can convert mossy pebbles into their own unique projectile
-The slingshots will likely be expanded more in the future, but for right now there isn't many of them, with only 3 existing in prehardmode


Config Improvements:

-Changed the color of the background, and the bars for each config option (This should hopefully help each option to stand out more, and I personally think it looks nicer)
-The screen shaking effect config is no longer an option that you turn off, it is now a slider that allows you to edit the intensity of it to your liking (More info is provided in game)


Other New Additions:

-Added bungus, chunky fungus, and mushroom hopper
-Added pumpkin putty, hopping candy basket (list all other spooky forest enemies here as they are finished)
-Added old wood greatsword, reinforced old wood bow, old wood slingshot, old wood staff, fungal flail, and spore smacker
-Added Rotty's wrath, Jerry's Book of Stinkology, Stinky Slinger, and Branch of Gourd
-Added the gilded mage armor set
-Added the bustling glowshroom
-Added the femur fracturer and idol of flame
-Added a mask and trophy for spooky spirit
-Added a bunch of new pets and light pets